<resources>
    <string name="app_name">Tenant</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="addtenant">addTenant</string>
    <string name="title_activity_tenant_detail">Tenant Detail</string>
    <string name="title_activity_add_tenant">Add Tenant</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="add">Add</string>
    <string name="phone_number">Phone Number</string>
    <string name="balance">Balance</string>
    <string name="name">Name</string>
    <string name="action_deleteAll">Delete All</string>
    <string name="action_goToMain">Home</string>
    <string name="paid_money">paid money</string>
    <string name="call_tenant">Call Tenant</string>
    <string name="pay">Pay</string>
    <string name="delete">Delete</string>
</resources>