<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.tenant.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings"/>
    <item
        android:id="@+id/action_deleteAll"
        android:orderInCategory="100"
        android:title="@string/action_deleteAll"
        app:showAsAction="always"
        android:icon="@drawable/ic_delete"/>
    <item
        android:id="@+id/action_mainpage"
        android:orderInCategory="100"
        android:title="@string/action_goToMain"
        app:showAsAction="always"
        android:icon="@drawable/ic_home"/>


</menu>